Build documentation: (e43c47c) Return array of SimulationSummary for /simulation endpoint
